--- a/package.json
+++ b/package.json
@@ -8,12 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.2",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-sms": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "express": "^4.17.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-dotenv": "^2.5.5",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-get-sms-android": "^2.1.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-sms": "^1.11.0",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-uri": "^1.2.3",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-web": "^0.15.5",
+    "twilio": "^3.62.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
